--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
+    "@nextui-org/react": "^2.2.10",
     "framer-motion": "^10.16.16",
     "next": "14.1.0",
     "react": "^18",
