--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.3.2",
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^10.16.16",
+    "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +27,7 @@
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.2",
     "swiper": "^11.0.5",
+    "swr": "^2.2.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
