--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sharp": "^0.33.2",
     "swiper": "^11.0.5",
     "swr": "^2.2.5",
+    "zod": "^3.22.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
